--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.11"
+    "@types/node": "^18.15.11",
+    "@types/uuid": "^9.0.2"
   },
   "dependencies": {
+    "@google-cloud/dialogflow": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   },
   "name": "portfolio-backend",
   "description": "This is a REST API for my portfolio website",
