--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
-    "@types/uuid": "^9.0.2"
+    "@types/uuid": "^9.0.2",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@google-cloud/dialogflow": "^6.0.0",
@@ -21,7 +22,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "npx tsc",
     "test": "jest",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
