feat: move statically served documents to firestore db

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 PORT=8080
 PROJECT_ID=isabellahoch-portfolio-mvfy
 CREDENTIALS_PATH=../../key.json
+FIREBASE_API_KEY=AIzaSyCAxbSj0FnUkCXmAEz3b7FJdYAvLUOTCM8
+FIREBASE_AUTH_DOMAIN=isabellahoch-portfolio-mvfy.firebaseapp.com
+FIREBASE_PROJECT_ID=isabellahoch-portfolio-mvfy
+FIREBASE_STORAGE_BUCKET=isabellahoch-portfolio-mvfy.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=883480031955
+FIREBASE_APP_ID=1:883480031955:web:dd8d46b60a7707b2bc1a26
+FIREBASE_MEASUREMENT_ID=G-F00W7HGGW6
