--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.5.0",
     "helmet": "^6.0.1",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
