--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@google-cloud/dialogflow": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "duolingo-api": "^1.0.2",
     "express": "^4.18.2",
     "firebase": "^10.5.0",
     "helmet": "^6.0.1",
